syntax = "proto3";

option go_package = "github.com/kiran-blockchain/netxd-go-advanced/grpc-demo/customer";

package customer;

service Customerservice {
    rpc InsertCustomer (Customer) returns (CustomerResponse);
    rpc GetCustomerDetails (CustomerID) returns (CustomerDetails);
}

message Customer {
    string id = 1;
    string name = 2;
    int32 AccId = 3;
    int32 balance = 4;
    int32 bankId = 5;
}

message CustomerResponse {
    string id = 1;
    string name = 2;
    int32 AccId = 3;
    int32 balance = 4;
    int32 bankId = 5;
}

message CustomerID {
    string id = 1;
}

message CustomerDetails {
    Customer customer = 1;
}